name:                MTransformers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/MTransformers#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10



executable MTransformers-exe
  hs-source-dirs:      
  main-is:             MonadT.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MTransformers
                     , transformers
                     , mtl
                     , containers

  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/MTransformers
